--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@ body{
     border: 1px solid black;
     padding: 10px 10px;
     margin: 20px 20px;
-    background-color: blueviolet;
+    background-color: lightcoral;
 }
